--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				</a>
 			</h1>
 			<p class="lead"></p>
-			<p class="lead">Javascript/angular/python developer with 'can do' altitude. </p>
+			<p class="lead">Javascript/angular/python developer with a 'can do' altitude. </p>
 			<p></p>
 		</div>
 		<nav class="sidebar-nav">
