--- a/categories.html
+++ b/categories.html
@@ -55,7 +55,7 @@
 	</div>
 </div>		<div class="content container">
 <ul>
-    <li><a href="/category/electronics.html">Electronics</a></li>
+    <li><a href="/category/intro.html">intro</a></li>
 </ul>
 		</div>
 	</body>
